--- a/les-31/index.html
+++ b/les-31/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./source/style.css">
     <title>Document</title>
 </head>
 <body>
@@ -35,6 +35,6 @@
       <div id="result">
 
       </div>
-    <script src="./index.js"></script>
+    <script src="./source//index.js"></script>
 </body>
 </html>
